feat(processor): simple extension scan and output